[TASK]    Remove DBALException annotation
[TASK]    Remove obsolete icon registration
[TASK]    Use new module registration and remove CSH file registration
[TASK]    Replace be.container viewhelper
[TASK]    Refactor fetching the number of records in the index
[TASK]    Add language to groupBy in trending search phrases widget to avoid MySQL error
[BUGFIX]  Apply rawurlencode only to file title. Thanks to Muhammad Zohaib. https://github.com/tpwd/ke_search/issues/146

Version 4.6.3, 3 February 2023
[!!!]     If you use the RouteEnhancer you will need to set one character default values for list and select filters. see Documentation/Configuration/RoutingSpeakingUrls.rst or https://github.com/tpwd/ke_search/commit/add3cb93c0c570f65b27bdb6edf28aa3bdbae5f6#diff-4df14275bdd91be559ccf5c988e352bd5f89da95790065d9015f1a32e60ca97f
[BUGFIX]  Make it possible to reset preselected filters. https://github.com/tpwd/ke_search/issues/134 and https://github.com/tpwd/ke_search/issues/126

Version 4.6.2, 13 January 2023
[BUGFIX]  Fix SQL query for assigning tags from page properties to work with sql_mode ONLY_FULL_GROUP_BY. Thanks to p-view. https://github.com/teaminmedias-pluswerk/ke_search/issues/448
[BUGFIX]  Enable creation of filter options from categories for hidden and time restricted categories. Thanks to Andreas Kessel. https://github.com/tpwd/ke_search/pull/144

Version 4.6.1, 13 January 2023
[TASK]    Respect workspace flag for content elements. Thanks to alexmari81. https://github.com/tpwd/ke_search/issues/139

Version 4.6.0, 6 January 2023
[!!!]     In this version the deprecated scheduler task is removed, use the provided schedulable console command instead.
[!!!]     To use the feature "Make search word parameter changeable" you will need to adapt the changes in the template "SearchForm.html" (line 13-17, line 31) to your own template.
[!!!]     This version changes the database structure.